[UX, Feature] Added a new option to allow OpenMarkov to match the Light/Dark theme based on wether the OS is on Light or Dark mode. If the user switchs from Light and Dark mode in their OS, the OpenMarkov theme will sync with it. This belongs to issue 359. [UX, UI] When creating a link, now the new link appears in gray as long as no node is selected, blue if a node is selected, or red if the selected node won't be able to be the destination node of the link (which would cause an excepction if the user requests the creation of said link). [UX, UI] When creating a link and selecting a link that cannot be created, while the exception dialog it is shown the link will be marked as red for the user to spot it, and it will dissappear after the exception dialog has been closed. [UI] When creating a link, the visual link will now be shortened to the cut point of source and destination links, which makes it easier for user to spot when they are selecting a node. [UX] When creating a link, it will be possible to create self link in only the networks that allow nodes to have a link to themselves (Check the NoSelfLink constraint). It will also not be visually selectable to create the self link for those networks. [UI, Bugfix] Options on DESNets are properly updated. This includes the undo and redo options now being usable again. [Bugfix] When changing the variable type restriction in "Network properties -> Variables -> Variable type", if the operation new restriction cannot be applied it will now show all the errors that make this impossible. This is because in the past, if an user had 3 variables not meeting the restriction, they would have to come to this dialog and only the first variable would be shown, which lead them to go and change them and then come back to this dialog, but then the second variable would show the error; Now the user sees all of these variables at the same time, allowing them to change them without needing to comeback to this dialog on every single chang